--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.2",
+    "node-fetch": "^3.3.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
